<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_text" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/answer_0_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1" />

        <Button
            android:id="@+id/answer_1_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option2" />

        <Button
            android:id="@+id/answer_2_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3" />

        <Button
            android:id="@+id/answer_3_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option4"
            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/hint_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="?android:buttonStyle"
            android:text="@string/hint"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/submit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="?android:buttonStyle"
            android:text="@string/submit"
            />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>